[build-system]
requires = ["setuptools>=64",
            "setuptools_scm[toml]>=7",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spot-nik"
description = "Site Planning and Observation Tool"
readme = "README.md"
authors = [{name = "SPOT Maintainers", email = "ocs@naoj.org"}]
license = {text = "BSD"}
requires-python = ">=3.11"
keywords = ["site", "telescope", "astronomy", "observation", "planning", "plugins"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
dependencies = [
    "astropy>=7.2.0",
    "jplephem>=2.21",
    "skyfield>=1.53",
    "python-dateutil>=2.8.2",
    "matplotlib>=3.8",
    "ginga>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/naojsoft/spot"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]
pg = [
    "websockets",
    "pgwidgets-js>=0.3.4",
    "pgwidgets-python>=0.3.4",
    "pycairo>=1.28.0",
    "cairosvg>=2.9.0",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE.md"]
script-files = ["scripts/spot", "scripts/spot.bat", "scripts/pam_w.py"]

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"spot.examples" = ["*.py"]
"spot.icons" = ["*.svg", "*.png"]
"spot.config" = ["*.yml", "*.fits", "*.json"]
"spot.doc" = ["*.md", "*.rst", "*.yml", "*.txt"]

[tool.setuptools_scm]
write_to = "spot/version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
# match the historical flake8 line length
line-length = 79

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F), to mirror the previous flake8 setup
select = ["E", "W", "F"]
# Ignoring these (carried over from the old [flake8] config):
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# F841: local variable is assigned to but never used
# (flake8's E129, I100/I101 and W504 are not implemented by ruff, so dropped)
ignore = ["E265", "E266", "E402", "E501", "E741", "F841"]
