[bdist_wheel]
universal = 1

[metadata]
name = spot
description = Subaru telescope Planning and Observation Tools 
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/naojsoft/spot
edit_on_github = False
github_project = naojsoft/spot
keywords = subaru, telescope, astronomy, planning, ginga, plugins
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    ginga>=4.0.1
    matplotlib>=2.2.3
    requests>=2.26.0
setup_requires = setuptools_scm
#include_package_data = True
scripts =
    scripts/spot

#[options.package_data]
#spot = config/*.yml

[options.entry_points]
ginga.rv.plugins =
    FindImage = spot.plugins:setup_FindImage
    InsFov = spot.plugins:setup_InsFov
    PolarSky = spot.plugins:setup_PolarSky
    TelescopePosition = spot.plugins:setup_TelescopePosition
    SkyCam = spot.plugins:setup_SkyCam
    Targets = spot.plugins:setup_Targets
    Visibility = spot.plugins:setup_Visibility
    SiteSelector = spot.plugins:setup_SiteSelector
    HSCPlanner = spot.plugins:setup_HSCPlanner

