[bdist_wheel]
universal = 1

[metadata]
name = spot-nik
description = Site Planning and Observation Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/naojsoft/spot
edit_on_github = False
github_project = naojsoft/spot
keywords = site, telescope, astronomy, observation, planning, plugins
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.11
install_requires =
    astropy>=5.0
    jplephem>=2.21
    skyfield>=1.48
    astroquery>=0.4.6
    python-dateutil>=2.8.2
    matplotlib>=3.4
    pandas>=0.24.1
    ginga>=5.2.0
    requests>=2.26.0
setup_requires = setuptools_scm
include_package_data = True
scripts =
    scripts/spot
    scripts/spot.bat

[options.extras_require]
recommended =
    scipy>=0.18.1
docs =
    sphinx
    sphinx_rtd_theme

[options.package_data]
spot.examples = *.py
spot.icons = *.svg
spot.config = *.yml
spot.doc = *.md, *.rst, *.yml, *.txt

[options.entry_points]
spot_plugins =
    FindImage = spot.plugins:setup_FindImage
    InsFov = spot.plugins:setup_InsFov
    PolarSky = spot.plugins:setup_PolarSky
    TelescopePosition = spot.plugins:setup_TelescopePosition
    SkyCam = spot.plugins:setup_SkyCam
    Targets = spot.plugins:setup_Targets
    Visibility = spot.plugins:setup_Visibility
    SiteSelector = spot.plugins:setup_SiteSelector
    HSCPlanner = spot.plugins:setup_HSCPlanner

[flake8]
# Ignoring these for now:
# E129: visually indented line with same indent as next logical line
# E265: block comment should start with '#'
# E266: too many leading '#' for block comment
# E402: module level import not at top of file
# E501: line too long
# E741: ambiguous variable name 'l'
# I100: import statements are in the wrong order
# I101: imported names are in the wrong order
# W504: line break after binary operator
# F841: local variable '%s' is assigned to but never used
ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841
